--- a/index.html
+++ b/index.html
@@ -16,10 +16,9 @@
     </header>
 
     <nav>
-        <a href="#">Nome</a>
+        <a href="#">Home</a>
         <a href="#">Notícias</a>
-        <a href="#">Curiosidades</a>
-        <a href="#">Fale Conosco</a>
+        <a href="#">Contato</a>
     </nav>
 
     <main>
